--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 		<div class="grid">
 		
 			<figure class="frame">
-				<a href="contact.html"><img src="images/mobile.jpg" alt="Art of a mobile phone"></a>
+				<a href="contact.html"><img id="up" src="images/mobile2.png" alt="Art of a portrait mobile phone"></a>
+				<a href="contact.html"><img id="down" src="images/mobile1.png" alt="Art of a landscape mobile phone"></a>
 				<figcaption class="pic-text">Mobile Sites</figcaption>
 			</figure>
 			
