--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About Us</a></li>
-				<li><a href="Pay.html">Rates</a></li>
+				<li><a href="rates.html">Rates </a></li>
 				<li><a href="services.html">Services</a></li>
 				<li><a href="contact.html">Contact Us</a></li>
 			</ul>
