--- a/template.html
+++ b/template.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
-<!-- This website template was created by: Taneesha scott-->
+<!-- This template was created by: Taneesha S-->
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="css/styles.css">
-	<title>Web design business</title>
+	<title>Design x template</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="icon" type="images/png" sizes="32x32" href="images/favicon-32.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-	<link rel="icon" sizes="192x192" href="images/android-chrome-192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 </head>
 <body>
 
 	<div id="container">
 
-	<!-- Use the header area for the website name or logo-->
+	<!-- The header area for the website name or logo-->
 		<header>
-			<a href="index.html"><img src="images/web-logo.png" alt="wesite logo"></a>
+			<a href="index.html"><img src="images/designx.jpg" alt="wesite logo"></a>
 			
 		</header>
 
-	<!-- Use the nav area to add hyperlinks to other pages within the website-->	
+	<!-- The nav area to add hyperlinks to other pages within the website-->	
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About Us</a></li>
-				<li><a href=""> </a></li>
+				<li><a href="rates.html">Rates </a></li>
 				<li><a href="services.html">Services</a></li>
 				<li><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
-	<!-- Use the main area to add the main content of the webpage-->	
+	<!-- The main area to add the main content of the webpage-->	
 		<main>
 		
 		<div>
 		</div>
 		
 		</main>
-	<!-- Use the footer area to add webpage footer content-->	
+	<!-- The footer area to add webpage footer content-->	
 		<footer>
-			<p>&copy;Copyright 2021. All Rights Reserved.</p>
-			<p><a href="mailto:Webdesign@business.net">webdesign@business.net</a></p>
+			<p>&copy;Copyright 2022. All Rights Reserved.</p>
+			<p><a href="mailto:designx@web.net">designx@webdesign.net</a></p>
 		</footer>
 	
 	</div>
