--- a/about.html
+++ b/about.html
@@ -41,13 +41,13 @@
 	<!-- The main area to add the main content of the webpage-->	
 		<main>
 			<section id="aboutText">
-				<article>
+				<article id="art">
 					This company was founded with a pure desire to use our talents in web programming, design and architecture to promote your brand. 
 				</article>
-				<article>
+				<article id="art">
 					Our product line began as a small group tasked to develop a website as a final project and then quickly evolved into a full-service webdesign company.
 				</article>
-				<article>
+				<article id="art">
 					What you don't need is different tools and teams to manage your web media strategy. With our team you're guarantied resolution within 48 hours! Contact us today to speak with a specialist.
 				</article>
 			</section>
@@ -59,7 +59,7 @@
 		  
 				  <aside>
 					<h2>Let us help you design a website.</h2>
-					<h3>(800) 555-2424</h3>
+					<h3>(336) 123-4567</h3>
 					<p>Contact us today and receive new customer discount!</p>
 				  </aside>
 		  
@@ -74,5 +74,6 @@
 		</footer>
 		
 	</div>
+	<script src="scripts/script.js"></script>
 </body>
 </html>
